--- a/templates/candle/candle.html
+++ b/templates/candle/candle.html
@@ -85,17 +85,14 @@
         wickDownColor: '#ef5350',
     });
 
-    const candleData = JSON.parse('{{ candles | json | safe }}').map(candle => {
-        return {
-            time: parseInt(candle.timestamp),
-            open: parseFloat(candle.open),
-            high: parseFloat(candle.high),
-            low: parseFloat(candle.low),
-            close: parseFloat(candle.close),
-            volume: parseFloat(candle.volume)
-        };
-    })
-        .sort((a, b) => a.time - b.time);
+    const candleData = {{ candles | tojson | safe }}.map(c => ({
+        time: +c.timestamp,
+        open: +c.open,
+        high: +c.high,
+        low: +c.low,
+        close: +c.close,
+        volume: +c.volume
+    })).sort((a, b) => a.time - b.time);
 
     candlestickSeries.setData(candleData);
 
