--- a/templates/strategy/onestrategy.html
+++ b/templates/strategy/onestrategy.html
@@ -19,6 +19,7 @@
             <th>close</th>
             <th>volume</th>
             <th>quote_volume</th>
+            <th>entry_point</th>
         </tr>
     </thead>
     <tbody>
@@ -35,6 +36,7 @@
             <td>{{ candle.close }}</td>
             <td>{{ candle.volume }}</td>
             <td>{{ candle.quote_volume }}</td>
+            <td>{{ candle.entry_point }}</td>
         </tr>
         {% endfor %}
     </tbody>
