--- a/templates/strategy/onestrategy.html
+++ b/templates/strategy/onestrategy.html
@@ -23,6 +23,7 @@
             <th>profit_point</th>
             <th>loss_point</th>
             <th>position_size</th>
+            <th>result_trade</th>
         </tr>
     </thead>
     <tbody>
@@ -43,6 +44,7 @@
             <td>{{ candle.profit_point }}</td>
             <td>{{ candle.loss_point }}</td>
             <td>{{ candle.position_size }}</td>
+            <td>{{ candle.result_trade }}</td>
         </tr>
         {% endfor %}
     </tbody>
