--- a/templates/strategy/onestrategy.html
+++ b/templates/strategy/onestrategy.html
@@ -24,6 +24,8 @@
             <th>loss_point</th>
             <th>position_size</th>
             <th>result_trade</th>
+            <th>tp</th>
+            <th>sl</th>
         </tr>
     </thead>
     <tbody>
@@ -45,6 +47,8 @@
             <td>{{ candle.loss_point }}</td>
             <td>{{ candle.position_size }}</td>
             <td>{{ candle.result_trade }}</td>
+            <td>{{ candle.tp_per }}</td>
+            <td>{{ candle.sl_per }}</td>
         </tr>
         {% endfor %}
     </tbody>
