--- a/templates/strategy/onestrategy.html
+++ b/templates/strategy/onestrategy.html
@@ -19,9 +19,9 @@
             <th>close</th>
             <th>volume</th>
             <th>quote_volume</th>
-            <th>entry_point</th>
-            <th>profit_point</th>
-            <th>loss_point</th>
+            <th>entry_price</th>
+            <th>profit_price</th>
+            <th>loss_price</th>
             <th>position_size</th>
             <th>result_trade</th>
             <th>tp</th>
@@ -42,9 +42,9 @@
             <td>{{ candle.close }}</td>
             <td>{{ candle.volume }}</td>
             <td>{{ candle.quote_volume }}</td>
-            <td>{{ candle.entry_point }}</td>
-            <td>{{ candle.profit_point }}</td>
-            <td>{{ candle.loss_point }}</td>
+            <td>{{ candle.entry_price }}</td>
+            <td>{{ candle.profit_price }}</td>
+            <td>{{ candle.loss_price }}</td>
             <td>{{ candle.position_size }}</td>
             <td>{{ candle.result_trade }}</td>
             <td>{{ candle.tp_per }}</td>
