--- a/templates/strategy/onestrategy.html
+++ b/templates/strategy/onestrategy.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <p><a href="/strategy">Strategy</a></p>
-
+<p>Total profit {{ total.total }}</p>
 <table border="1">
     <thead>
         <tr>
