--- a/templates/strategy/strategy.html
+++ b/templates/strategy/strategy.html
@@ -18,6 +18,7 @@
             <th>close</th>
             <th>volume</th>
             <th>quote_volume</th>
+            <th>profit</th>
         </tr>
     </thead>
     <tbody>
@@ -34,6 +35,7 @@
             <td>{{ candle.close }}</td>
             <td>{{ candle.volume }}</td>
             <td>{{ candle.quote_volume }}</td>
+            <td>{{ candle.profit }}</td>
         </tr>
         {% endfor %}
     </tbody>
