--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -16,7 +16,7 @@
       <p><a href="/borrow">Borrow</a></p>
       <p><a href="/candle">Candle</a></p>
       <p><a href="/strategy">Strategy</a></p>
-      <p><a href="/smastrategy">SmaStrategy</a></p>
+      <p><a href="/sma">SmaStrategy</a></p>
   </section>
 </main>
 {% endblock %}
