--- a/templates/sma/candle.html
+++ b/templates/sma/candle.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <p><a href="/sma">Sma</a></p>
+<p>commission rate: {{ commission_rate }}</p>
 <table border="1">
     <thead>
         <tr>
